--- a/inspections/templates/inspections/inspection_list.html
+++ b/inspections/templates/inspections/inspection_list.html
@@ -266,24 +266,35 @@
         <ul class="pagination justify-content-center">
             {% if page_obj.has_previous %}
             <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.previous_page_number }}&search={{ request.GET.search }}&status={{ request.GET.status }}&branch={{ request.GET.branch }}">
+                <a class="page-link" href="?page=1&search={{ request.GET.search }}&status={{ request.GET.status }}&branch={{ request.GET.branch }}" title="الأولى">
+                    <i class="fas fa-angle-double-right"></i>
+                </a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}&search={{ request.GET.search }}&status={{ request.GET.status }}&branch={{ request.GET.branch }}" title="السابقة">
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
             {% endif %}
 
+            {# عرض 10 صفحات فقط حول الصفحة الحالية #}
             {% for num in page_obj.paginator.page_range %}
-            <li class="page-item {% if num == page_obj.number %}active{% endif %}">
-                <a class="page-link" href="?page={{ num }}&search={{ request.GET.search }}&status={{ request.GET.status }}&branch={{ request.GET.branch }}">
-                    {{ num }}
-                </a>
-            </li>
+                {% if num >= page_obj.number|add:'-4' and num <= page_obj.number|add:'5' %}
+                    <li class="page-item {% if num == page_obj.number %}active{% endif %}">
+                        <a class="page-link" href="?page={{ num }}&search={{ request.GET.search }}&status={{ request.GET.status }}&branch={{ request.GET.branch }}">{{ num }}</a>
+                    </li>
+                {% endif %}
             {% endfor %}
 
             {% if page_obj.has_next %}
             <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.next_page_number }}&search={{ request.GET.search }}&status={{ request.GET.status }}&branch={{ request.GET.branch }}">
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}&search={{ request.GET.search }}&status={{ request.GET.status }}&branch={{ request.GET.branch }}" title="التالية">
                     <i class="fas fa-chevron-left"></i>
+                </a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}&search={{ request.GET.search }}&status={{ request.GET.status }}&branch={{ request.GET.branch }}" title="الأخيرة">
+                    <i class="fas fa-angle-double-left"></i>
                 </a>
             </li>
             {% endif %}
