توحيد نظام العملة ليعتمد على إعدادات النظام فقط في كل النظام (منتجات، مخزون، قوالب)

--- a/customers/templates/customers/customer_detail.html
+++ b/customers/templates/customers/customer_detail.html
@@ -352,7 +352,7 @@
                                             {{ order.get_tracking_status_display }}
                                         </span>
                                     </td>
-                                    <td>{{ order.total_amount }} ج.م</td>
+                                    <td>{{ order.total_amount }} {{ currency_symbol }}</td>
                                 </tr>
                                 {% endfor %}
                             </tbody>
