--- a/orders/templates/orders/order_list.html
+++ b/orders/templates/orders/order_list.html
@@ -83,9 +83,9 @@
                                 <span class="badge bg-danger">ملغي</span>
                                 {% endif %}
                             </td>
-                            <td>{{ order.total_amount }} ج.م</td>
-                            <td>{{ order.paid_amount }} ج.م</td>
-                            <td>{{ order.remaining_amount }} ج.م</td>
+                            <td>{{ order.total_amount }} {{ currency_symbol }}</td>
+                            <td>{{ order.paid_amount }} {{ currency_symbol }}</td>
+                            <td>{{ order.remaining_amount }} {{ currency_symbol }}</td>
                             <td>
                                 <div class="btn-group btn-group-sm">
                                     <a href="{% url 'orders:order_detail' order.pk %}" class="btn btn-info" title="عرض">
