--- a/orders/templates/orders/payment_form.html
+++ b/orders/templates/orders/payment_form.html
@@ -14,9 +14,9 @@
                     <div class="alert alert-info">
                         <p class="mb-0">
                             <strong>الطلب:</strong> #{{ order.order_number }} - {{ order.customer.name }}<br>
-                            <strong>المبلغ الإجمالي:</strong> {{ order.total_amount }} ج.م<br>
-                            <strong>المبلغ المدفوع:</strong> {{ order.paid_amount }} ج.م<br>
-                            <strong>المبلغ المتبقي:</strong> {{ order.remaining_amount }} ج.م
+                            <strong>المبلغ الإجمالي:</strong> {{ order.total_amount }} {{ currency_symbol }}<br>
+                            <strong>المبلغ المدفوع:</strong> {{ order.paid_amount }} {{ currency_symbol }}<br>
+                            <strong>المبلغ المتبقي:</strong> {{ order.remaining_amount }} {{ currency_symbol }}
                         </p>
                     </div>
                     
