--- a/inventory/templates/inventory/product_detail_new_icons.html
+++ b/inventory/templates/inventory/product_detail_new_icons.html
@@ -41,7 +41,7 @@
                             <span class="badge bg-info">{{ product.category }}</span>
                         </div>
                         <div class="product-price mt-3">
-                            <h4>{{ product.price }} ريال</h4>
+                            <h4>{{ product.price }} {{ currency_symbol }}</h4>
                         </div>
                     </div>
                     <hr>
