--- a/orders/templates/orders/order_detail.html
+++ b/orders/templates/orders/order_detail.html
@@ -505,6 +505,8 @@
     </div>
 </div>
 
+{% endblock %}
+
 {% block extra_css %}
 <style>
 /* Timeline styling */
@@ -548,4 +550,3 @@
 }
 </style>
 {% endblock %}
-{% endblock %
