تحديث ملف المتطلبات بإضافة المكتبات الناقصة

--- a/odoo_db_manager/templates/odoo_db_manager/advanced_sync/mapping_create.html
+++ b/odoo_db_manager/templates/odoo_db_manager/advanced_sync/mapping_create.html
@@ -280,17 +280,12 @@
                             </div>
                             <div class="col-md-6">
                                 <h6>إعدادات التحديث</h6>
-                                <div class="form-check mb-2">
-                                    <input class="form-check-input" type="checkbox" id="update_existing_customers" name="update_existing_customers" checked>
-                                    <label class="form-check-label" for="update_existing_customers">
-                                        تحديث العملاء الموجودين
+                                <div class="form-check mb-3">
+                                    <input class="form-check-input" type="checkbox" id="update_existing" name="update_existing" checked>
+                                    <label class="form-check-label" for="update_existing">
+                                        تحديث السجلات الموجودة
                                     </label>
-                                </div>
-                                <div class="form-check mb-2">
-                                    <input class="form-check-input" type="checkbox" id="update_existing_orders" name="update_existing_orders" checked>
-                                    <label class="form-check-label" for="update_existing_orders">
-                                        تحديث الطلبات الموجودة
-                                    </label>
+                                    <small class="form-text text-muted d-block">سيتم تحديث السجلات الموجودة (العملاء والطلبات) في حالة وجودها</small>
                                 </div>
                                 <div class="form-check mb-3">
                                     <input class="form-check-input" type="checkbox" id="enable_reverse_sync" name="enable_reverse_sync">
